--- a/note.html
+++ b/note.html
@@ -1,6 +1,6 @@
 cloudflare account = https://garnerviloria.pages.dev/
 connected to github
 
-git add
-git commit -m "note"
-git push
+git add .   <!--add the new files to local git-->
+git commit -m "note" <!-- commit changes in files to local git-->
+git push    <!-- push the changes to github repo-->
